5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1800_2563.log
== SUBMITION (2019-06-06 10:56:59) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
		print(i)
		nota=array(eval(input("digite notas dos alunos")))
-- EXECUTION TIME:
1.08661
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 11, in <module>
    nota=array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:57:11) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
		print(i)
		nota=array(eval(input("digite notas dos alunos")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:22) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
		print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.09526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 11, in <module>
    nota=array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:48) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.843283
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:51) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.811173
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:55) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i=i+1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.880834
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:59:48) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.799698
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:59:53) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- ERROR:
File "XXXX", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:00:04) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.866411
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:00:07) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.17674
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:45) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	nota=array(eval(input("entre com as notas dos alunos:")))
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)

-- EXECUTION TIME:
0.833434
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
3
1
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
4
1
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
3
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:51) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	nota=array(eval(input("entre com as notas dos alunos:")))
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)

-- EXECUTION TIME:
1.11557
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
3
1
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
4
1
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
3
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:55) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	nota=array(eval(input("entre com as notas dos alunos:")))
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)

-- EXECUTION TIME:
1.03653
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
3
1
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
4
1
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
3
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:05) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
   nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.644156
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 12
    nota=array(eval(input()))
                            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:14) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
   nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.774166
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
                            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:29) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.00717
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:32) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
		nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.767068
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 11
    nota=array(eval(input()))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:48) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.1708
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:05:06) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.08519
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:05:13) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
0.978909
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:05:32) 
-- CODE:
from numpy import*
nota=array(eval(input("entre com as notas dos alunos:")))

while(size(nota)>2):
	i=0
	for elemento in nota:
		if(elemento>=5 and elemento<7):
			i = i + 1
			
	print(i)
	nota=array(eval(input("entre com as notas dos alunos:")))
-- EXECUTION TIME:
1.16588
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
